pricing, fixing elements without tags and layout bugging in NL and FR

--- a/web/app/themes/blank/src/scss/layout/_pricing.scss
+++ b/web/app/themes/blank/src/scss/layout/_pricing.scss
@@ -165,15 +165,18 @@
 		}
 
 		.swiper-horizontal {
+
 			.swiper-pagination-bullets,
 			.swiper-pagination-bullets.swiper-pagination-horizontal,
 			.swiper-pagination-custom,
 			.swiper-pagination-fraction {
 				bottom: 0px;
 			}
+
 			.swiper-pagination-bullet {
 				background-color: $lighter-color;
 			}
+
 			.swiper-pagination-bullet-active {
 				background: $main-color;
 			}
@@ -222,56 +225,65 @@
 					width: 100%;
 					min-height: 420px;
 					border-radius: 30px;
-					padding-top: 25px;
-					display: flex;
-					flex-direction: column;
-					align-items: center;
-
+					display: grid;
+					grid-template-rows: 27% 1fr 15% 10%;
+			
 					.price {
 						font-size: 100px;
 						display: flex;
 						justify-content: center;
 						margin-bottom: 15px;
-
+						
 						.euro {
 							font-size: 57px;
 							vertical-align: super;
 						}
 					}
+					
+					.infos {
+						display: flex;
+						flex-direction: column;
+						justify-content: space-evenly;
+					}
 
 					.info {
 						font-size: 20px;
-						margin: 0 0 20px 0;
+						p {
+							line-height: 1.2;
+						}
 					}
 
 					.billing_button {
 						@include button(16px);
-						width: 225px;
-						margin: 20px 0;
+						width: fit-content;
+						margin-bottom: 20px;
 						color: $white;
-						height: 60px;
+						padding: 20px;
 						display: flex;
 						align-items: center;
 						justify-content: center;
 						font-weight: 600;
+						margin: auto;
 					}
 
 					.see_more {
 						font-size: 12px;
-						margin-bottom: 24px;
+						padding-top: 8px;	
 					}
 				}
 
 				&.medium {
 					background-color: $black;
+
 					@media screen and(min-width: 992px) {
-						height: 555px;
+						min-height: 555px;
 						padding-top: 40px;
 					}
 
 					.billing_button {
 						background-color: $black;
 						border-color: $black;
+
 						&:hover {
 							background-color: $grey;
 							border-color: $grey;
